--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               </div>
               <div>
                 <label for="prodotto" class="form-label text-sm"
-                  >Prodotto</label
+                  >Variante</label
                 >
                 <select id="prodotto" name="prodotto" class="form-select">
                   <option>Base</option>
