--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                   <td
                     class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
                   >
-                    Visita Fisiatrica
+                    Valutazione Logopedica
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                     25/07/2025
