--- a/index.html
+++ b/index.html
@@ -81,39 +81,14 @@
         .completed-evaluation-row {
             cursor: pointer;
         }
+        .evaluation-details-row > td {
+            padding: 0;
+        }
     </style>
 </head>
 <body>
 
     <div class="flex h-screen bg-gray-100">
-        <!-- Sidebar Mock -->
-        <aside class="w-64 flex-shrink-0 bg-white border-r border-gray-200 flex flex-col">
-            <div class="h-16 flex items-center justify-center border-b border-gray-200">
-                <h1 class="text-xl font-bold primary-color">RHAM</h1>
-            </div>
-            <nav class="flex-1 px-4 py-6 space-y-2">
-                <a href="#" class="flex items-center gap-3 px-4 py-2 text-gray-700 rounded-lg hover:bg-gray-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" /></svg>
-                    <span>Dashboard</span>
-                </a>
-                <a href="#" class="flex items-center gap-3 px-4 py-2 text-gray-700 rounded-lg hover:bg-gray-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M15 21a6 6 0 00-9-5.197m0 0A5.975 5.975 0 0112 13a5.975 5.975 0 013 1.003m-3-1.003A4.002 4.002 0 0112 4.354" /></svg>
-                    <span>Pazienti</span>
-                </a>
-                <a href="#" class="flex items-center gap-3 px-4 py-2 text-white rounded-lg bg-primary-color">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" /></svg>
-                    <span>Appuntamenti</span>
-                </a>
-                 <a href="#" class="flex items-center gap-3 px-4 py-2 text-gray-700 rounded-lg hover:bg-gray-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-                    <span>Risorse Umane</span>
-                </a>
-                <a href="#" class="flex items-center gap-3 px-4 py-2 text-gray-700 rounded-lg hover:bg-gray-100">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
-                    <span>Contabilità</span>
-                </a>
-            </nav>
-        </aside>
 
         <!-- Main Content -->
         <main class="flex-1 overflow-y-auto p-6 md:p-10">
@@ -206,7 +181,7 @@
 
                         <!-- Lista/Tabella delle valutazioni -->
                         <div class="overflow-x-auto border border-gray-200 rounded-lg">
-                            <table class="min-w-full divide-y divide-gray-200">
+                            <table class="min-w-full">
                                 <thead class="bg-gray-50">
                                     <tr>
                                         <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Nome</th>
@@ -217,7 +192,7 @@
                                 </thead>
                                 <tbody id="evaluations-tbody" class="bg-white divide-y divide-gray-200">
                                     <!-- Esempio riga: Programmata -->
-                                    <tr>
+                                    <tr class="hover:bg-gray-50">
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Valutazione Neuromotoria</td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">25/07/2025</td>
                                         <td class="px-6 py-4 whitespace-nowrap">
@@ -227,7 +202,7 @@
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Dr. Rossi</td>
                                     </tr>
-                                    <!-- Esempio riga: Completata -->
+                                    <!-- Esempio riga: Completata (Espandibile) -->
                                     <tr class="completed-evaluation-row hover:bg-gray-50">
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Valutazione Logopedica</td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">15/07/2025</td>
@@ -236,7 +211,36 @@
                                                 COMPLETATA
                                             </span>
                                         </td>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">Dr. Bianchi</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 flex items-center justify-between">
+                                          <span>Dr. Bianchi</span>
+                                          <svg xmlns="http://www.w3.org/2000/svg" class="details-chevron h-5 w-5 text-gray-400 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+                                          </svg>
+                                        </td>
+                                    </tr>
+                                    <!-- Dettagli riga completata (nascosta) -->
+                                    <tr class="evaluation-details-row hidden">
+                                        <td colspan="4">
+                                            <div class="bg-gray-50 p-4 md:p-6 space-y-4">
+                                                <div>
+                                                    <h4 class="form-label text-sm">Report allegati</h4>
+                                                    <ul class="space-y-2">
+                                                        <li class="flex items-center">
+                                                            <a href="#" class="flex items-center gap-3 text-blue-600 hover:underline">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13" /></svg>
+                                                                <span>report_logopedico_072025.pdf</span>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                                <div>
+                                                    <h4 class="form-label text-sm">Note</h4>
+                                                    <div class="p-3 bg-white border rounded-md text-gray-700 text-sm">
+                                                        Il paziente ha mostrato notevoli miglioramenti nella fluidità verbale. Si consiglia di proseguire con gli esercizi assegnati e programmare un controllo fra 3 mesi.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
                                     </tr>
                                     <!-- Qui verranno aggiunte dinamicamente le altre righe -->
                                 </tbody>
@@ -310,49 +314,6 @@
         </main>
     </div>
 
-    <!-- Modale Dettagli Valutazione -->
-    <div id="evaluation-modal" class="hidden fixed inset-0 bg-gray-900 bg-opacity-50 flex items-center justify-center z-50">
-        <div class="bg-white rounded-lg shadow-xl w-full max-w-2xl p-6 md:p-8 m-4">
-            <!-- Header Modale -->
-            <div class="flex justify-between items-center border-b pb-3">
-                <h3 class="text-xl font-bold text-gray-800">Dettagli Valutazione Completata</h3>
-                <button id="close-modal-btn" class="text-gray-500 hover:text-gray-800">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-            <!-- Contenuto Modale -->
-            <div class="mt-6 space-y-6">
-                <!-- Report Allegati -->
-                <div>
-                    <h4 class="form-label">Report allegati</h4>
-                    <ul class="space-y-2">
-                        <li class="flex items-center">
-                            <a href="#" class="flex items-center gap-3 text-blue-600 hover:underline">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13" /></svg>
-                                <span>report_logopedico_072025.pdf</span>
-                            </a>
-                        </li>
-                        <li class="flex items-center">
-                             <a href="#" class="flex items-center gap-3 text-blue-600 hover:underline">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M15.172 7l-6.586 6.586a2 2 0 102.828 2.828l6.414-6.586a4 4 0 00-5.656-5.656l-6.415 6.585a6 6 0 108.486 8.486L20.5 13" /></svg>
-                                <span>allegato_test_valutazione.docx</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Note -->
-                <div>
-                    <h4 class="form-label">Note</h4>
-                    <div class="p-4 bg-gray-50 border rounded-md text-gray-700 text-sm">
-                        Il paziente ha mostrato notevoli miglioramenti nella fluidità verbale. Si consiglia di proseguire con gli esercizi assegnati e programmare un controllo fra 3 mesi.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // --- GESTIONE ELEMENTI DEL DOM ---
@@ -365,8 +326,6 @@
             const anamnesiHeader = document.getElementById('anamnesi-header');
             const anamnesiContent = document.getElementById('anamnesi-content');
             const anamnesiChevron = document.getElementById('anamnesi-chevron');
-            const evaluationModal = document.getElementById('evaluation-modal');
-            const closeModalBtn = document.getElementById('close-modal-btn');
 
             // --- INIZIALIZZAZIONE ---
 
@@ -379,10 +338,6 @@
             anamnesiContent.classList.add('hidden');
             anamnesiChevron.classList.remove('rotate-180');
 
-            // --- FUNZIONI ---
-            const showModal = () => evaluationModal.classList.remove('hidden');
-            const hideModal = () => evaluationModal.classList.add('hidden');
-
             // --- EVENT LISTENERS ---
 
             addEvaluationBtn.addEventListener('click', () => {
@@ -392,6 +347,7 @@
             saveEvaluationBtn.addEventListener('click', () => {
                 const attivitaValue = attivitaSelect.value;
                 const newRow = document.createElement('tr');
+                newRow.classList.add('hover:bg-gray-50');
                 newRow.innerHTML = `
                     <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${attivitaValue}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
@@ -414,19 +370,17 @@
                 anamnesiChevron.classList.toggle('rotate-180', !isHidden);
             });
 
-            // Listener per aprire la modale
+            // Listener per espandere/collassare la riga dei dettagli
             evaluationsTbody.addEventListener('click', (event) => {
                 const row = event.target.closest('tr');
                 if (row && row.classList.contains('completed-evaluation-row')) {
-                    showModal();
-                }
-            });
+                    const detailsRow = row.nextElementSibling;
+                    const chevron = row.querySelector('.details-chevron');
 
-            // Listeners per chiudere la modale
-            closeModalBtn.addEventListener('click', hideModal);
-            evaluationModal.addEventListener('click', (event) => {
-                if (event.target === evaluationModal) {
-                    hideModal();
+                    if (detailsRow && detailsRow.classList.contains('evaluation-details-row')) {
+                        detailsRow.classList.toggle('hidden');
+                        chevron.classList.toggle('rotate-180');
+                    }
                 }
             });
         });
