--- a/colloquio.html
+++ b/colloquio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modulo Anamnesi Paziente</title>
+    <title>Modulo Colloquio</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter -->
@@ -15,25 +15,22 @@
     <script src="https://cdn.jsdelivr.net/npm/tom-select@2.3.1/dist/js/tom-select.complete.min.js"></script>
 
     <style>
-        /* Stile personalizzato per coerenza con l'immagine */
+        /* Stile personalizzato */
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8f9fa; 
         }
-        /* Colore primario ispirato all'immagine */
+        /* Colore primario */
         .primary-color {
             color: #8c2d52;
         }
         .bg-primary-color {
             background-color: #8c2d52;
         }
-        .border-primary-color {
-            border-color: #8c2d52;
-        }
         /* Stile per i campi del modulo */
         .form-input, .form-textarea, .form-select, .form-multiselect {
             border-radius: 0.5rem;
-            border: 1px solid #d1d5db; /* Bordo grigio */
+            border: 1px solid #d1d5db;
             padding: 0.75rem 1rem;
             width: 100%;
             transition: border-color 0.2s, box-shadow 0.2s;
@@ -48,16 +45,10 @@
             display: block;
             margin-bottom: 0.5rem;
             font-weight: 500;
-            color: #374151; /* Testo grigio scuro */
+            color: #374151;
         }
-        /* Stile per il datepicker per mostrare l'icona del calendario */
-        input[type="date"]::-webkit-calendar-picker-indicator {
-            cursor: pointer;
-            opacity: 0.6;
-            filter: invert(0.5) sepia(1) saturate(5) hue-rotate(300deg);
-        }
-
-        /* Stili per allineare Tom Select con Tailwind */
+        
+        /* Stili per Tom Select */
         .ts-control {
             border-radius: 0.5rem !important;
             border: 1px solid #d1d5db !important;
@@ -91,47 +82,34 @@
     <div class="w-full max-w-5xl mx-auto bg-white rounded-xl shadow-lg border border-gray-200 overflow-hidden">
         <!-- Intestazione del modulo -->
         <div class="p-6 border-b border-gray-200 relative">
-            <h1 class="text-2xl font-bold text-gray-800">Visita Medica</h1>
-            <p class="text-gray-500 mt-1">Compila i campi riguardanti la visita medica del paziente.</p>
+            <h1 class="text-2xl font-bold text-gray-800">Colloquio</h1>
+            <p class="text-gray-500 mt-1">Compila i campi riguardanti il colloquio del paziente.</p>
         </div>
 
         <!-- Contenuto del modulo -->
         <form class="p-6 md:p-8 space-y-8">
             
-            <!-- Sezione Dati e Diagnosi -->
+            <!-- Sezione Dati Principali -->
             <div>
-                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-6">Dati e Diagnosi</h2>
+                <h2 class="text-xl font-semibold text-gray-700 border-b pb-2 mb-6">Dettagli Colloquio</h2>
                 <div class="grid grid-cols-1 my-6 gap-6">
-                    <!-- Campo Disabilità (Multiselect Ricercabile) -->
+                    <!-- Campo Aree d'intervento (Multiselect Ricercabile) -->
                     <div>
-                        <label for="disabilita" class="form-label">Disabilità <span class="text-red-500">*</span></label>
-                        <select id="disabilita" name="disabilita[]" multiple required>
+                        <label for="aree_intervento" class="form-label">Aree d'intervento <span class="text-red-500">*</span></label>
+                        <select id="aree_intervento" name="aree_intervento[]" multiple required>
                             <option value="motoria">Motoria</option>
                             <option value="visiva">Visiva</option>
                             <option value="uditiva">Uditiva</option>
                             <option value="cognitiva">Cognitiva/Intellettiva</option>
                             <option value="psichica">Psichica</option>
-                            <option value="altro">Altro (specificare nelle note)</option>
+                            <option value="altro">Altro</option>
                         </select>
                     </div>
 
-                    <!-- Campo Diagnosi (Textarea) -->
+                    <!-- Campo Note (Textarea) -->
                     <div>
-                        <label for="diagnosi" class="form-label">Diagnosi <span class="text-red-500">*</span></label>
-                        <textarea id="diagnosi" name="diagnosi" class="form-textarea" rows="4" placeholder="Descrivere la diagnosi dettagliata..." required></textarea>
-                    </div>
-                </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div>
-                        <label for="data_inizio" class="form-label">Data di inizio</label>
-                        <input type="date" id="data_inizio" name="data_inizio" class="form-input" />
-                    </div>
-
-                    <!-- Campo Motivo della consultazione -->
-                    <div>
-                        <label for="motivo_consultazione" class="form-label">Motivo della consultazione</label>
-                        <input type="text" id="motivo_consultazione" name="motivo_consultazione" class="form-input" placeholder="Es. Controllo periodico" />
+                        <label for="note" class="form-label">Note</label>
+                        <textarea id="note" name="note" class="form-textarea" rows="4" placeholder="Inserire eventuali note..."></textarea>
                     </div>
                 </div>
             </div>
@@ -251,58 +229,6 @@
                 </div>
             </div>
 
-            <!-- Sezione Anamnesi e Valutazione (Collassabile) -->
-            <div>
-                <!-- Header Cliccabile -->
-                <div id="anamnesi-header" class="flex justify-between items-center cursor-pointer border-t border-gray-200 pt-8">
-                    <h2 class="text-xl font-semibold text-gray-700">Anamnesi e Valutazione</h2>
-                    <svg id="anamnesi-chevron" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-                    </svg>
-                </div>
-
-                <!-- Contenuto Collassabile -->
-                <div id="anamnesi-content" class="hidden mt-6 space-y-6">
-                    <!-- Anamnesi Familiare -->
-                    <div>
-                        <label for="anamnesi_familiare" class="form-label">Anamnesi familiare</label>
-                        <textarea id="anamnesi_familiare" name="anamnesi_familiare" rows="4" class="form-textarea" placeholder="Descrivere la storia medica della famiglia..."></textarea>
-                    </div>
-
-                    <!-- Griglia per le altre anamnesi -->
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div>
-                            <label for="anamnesi_fisiologica" class="form-label">Anamnesi fisiologica</label>
-                            <textarea id="anamnesi_fisiologica" name="anamnesi_fisiologica" rows="4" class="form-textarea" placeholder="Nascita, sviluppo, abitudini..."></textarea>
-                        </div>
-                        <div>
-                            <label for="anamnesi_patologica_remota" class="form-label">Anamnesi patologica remota</label>
-                            <textarea id="anamnesi_patologica_remota" name="anamnesi_patologica_remota" rows="4" class="form-textarea" placeholder="Malattie pregresse, interventi..."></textarea>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="anamnesi_patologica_attuale" class="form-label">Anamnesi patologica attuale</label>
-                        <textarea id="anamnesi_patologica_attuale" name="anamnesi_patologica_attuale" rows="4" class="form-textarea" placeholder="Descrivere la patologia in corso..."></textarea>
-                    </div>
-
-                    <!-- Sezione Clinica interna -->
-                    <div class="pt-6 border-t border-gray-200 space-y-6">
-                        <div>
-                            <label for="valutazione_clinica" class="form-label">Valutazione clinica / Esame obiettivo</label>
-                            <textarea id="valutazione_clinica" name="valutazione_clinica" rows="5" class="form-textarea" placeholder="Risultati dell'esame fisico, parametri vitali..."></textarea>
-                        </div>
-                        <div>
-                            <label for="indicazioni_prescrizioni" class="form-label">Indicazioni e prescrizioni</label>
-                            <textarea id="indicazioni_prescrizioni" name="indicazioni_prescrizioni" rows="5" class="form-textarea" placeholder="Terapie farmacologiche, esami da effettuare, consigli..."></textarea>
-                        </div>
-                        <div>
-                            <label for="note_aggiuntive" class="form-label">Note aggiuntive</label>
-                            <textarea id="note_aggiuntive" name="note_aggiuntive" rows="3" class="form-textarea" placeholder="Eventuali altre informazioni utili..."></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <!-- Pulsanti di azione -->
             <div class="flex justify-end items-center pt-6 border-t border-gray-200">
                 <button type="button" class="px-6 py-2.5 rounded-lg text-gray-600 font-semibold hover:bg-gray-100 transition-colors">
@@ -329,23 +255,17 @@
             const evaluationsContent = document.getElementById('evaluations-content');
             const evaluationsChevron = document.getElementById('evaluations-chevron');
 
-            const anamnesiHeader = document.getElementById('anamnesi-header');
-            const anamnesiContent = document.getElementById('anamnesi-content');
-            const anamnesiChevron = document.getElementById('anamnesi-chevron');
-
             // --- INIZIALIZZAZIONE ---
 
-            new TomSelect('#disabilita',{
+            new TomSelect('#aree_intervento',{
                 plugins: ['remove_button'],
-                placeholder: 'Cerca o seleziona una o più disabilità...',
+                placeholder: 'Cerca o seleziona una o più aree...',
                 create: false 
             });
 
-            // Inizializza le sezioni come collassate
+            // Inizializza la sezione come collassata
             evaluationsContent.classList.add('hidden');
             evaluationsChevron.classList.remove('rotate-180');
-            anamnesiContent.classList.add('hidden');
-            anamnesiChevron.classList.remove('rotate-180');
 
             // --- EVENT LISTENERS ---
 
@@ -374,15 +294,10 @@
                 newEvaluationForm.classList.add('hidden');
             });
 
-            // Listener per sezioni collassabili
+            // Listener per sezione valutazioni collassabile
             evaluationsHeader.addEventListener('click', () => {
                 const isHidden = evaluationsContent.classList.toggle('hidden');
                 evaluationsChevron.classList.toggle('rotate-180', !isHidden);
-            });
-
-            anamnesiHeader.addEventListener('click', () => {
-                const isHidden = anamnesiContent.classList.toggle('hidden');
-                anamnesiChevron.classList.toggle('rotate-180', !isHidden);
             });
 
             // Listener per espandere/collassare la riga dei dettagli
