Fix variable names for evaluation content toggling in valutazione.html

--- a/valutazione.html
+++ b/valutazione.html
@@ -607,8 +607,8 @@
 
         anamnesiContent.classList.add("hidden");
         anamnesiChevron.classList.remove("rotate-180");
-        evaluationContent.classList.add("hidden");
-        evaluationChevron.classList.remove("rotate-180");
+        evaluationsContent.classList.add("hidden");
+        evaluationsChevron.classList.remove("rotate-180");
 
         // --- EVENT LISTENERS ---
 
