Update links in index.html to use relative paths for navigation

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <ul>
         <li>
-            <a href="/valutazione">Valutazione</a>
+            <a href="./valutazione">Valutazione</a>
         </li>
         <li>
-            <a href="/colloquio">Colloquio</a>
+            <a href="./colloquio">Colloquio</a>
         </li>
     </ul>
 
