--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <ul>
         <li>
-            <a href="./valutazione">Valutazione</a>
+            <a href="./visita">Valutazione</a>
         </li>
         <li>
             <a href="./colloquio">Colloquio</a>
