--- a/visita.html
+++ b/visita.html
@@ -595,7 +595,46 @@
                 </div>
               </div>
             </div>
-          </div>
+
+            <!-- <div>
+                <h2 class="text-lg font-semibold text-gray-700 pb-2 mb-6 pt-8 border-t">Allegati</h2>
+                <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+                    <div class="space-y-1 text-center">
+                        <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                            <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        <div class="flex text-sm text-gray-600">
+                            <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                                <span>Carica un file</span>
+                                <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                            </label>
+                            <p class="pl-1">o trascina</p>
+                        </div>
+                        <p class="text-xs text-gray-500">
+                            PNG, JPG, PDF fino a 10MB
+                        </p>
+                    </div>
+                </div>
+            </div> -->
+
+            <!-- Pulsanti di azione -->
+            <div
+              class="flex justify-end items-center pt-6 border-t border-gray-200"
+            >
+              <button
+                type="button"
+                class="px-6 py-2.5 rounded-lg text-gray-600 font-semibold hover:bg-gray-100 transition-colors"
+              >
+                Annulla
+              </button>
+              <button
+                type="submit"
+                class="ml-4 px-6 py-2.5 rounded-lg bg-primary-color text-white font-semibold hover:opacity-90 transition-opacity shadow-md"
+              >
+                Salva Dati
+              </button>
+            </div>
+          </form>
         </div>
 
         <!-- Step 2: Next step -->
