Update step titles in colloquio.html and visita.html for consistency and clarity

--- a/colloquio.html
+++ b/colloquio.html
@@ -465,7 +465,7 @@
           </div>
         </div>
 
-        <!-- Step 2: Restituzione -->
+        <!-- Step 2: Next Step -->
         <div id="step-2" class="hidden">
           <div class="space-y-8">
             <div>
@@ -608,7 +608,7 @@
         const stepperLines = [document.getElementById("stepper-line-1")];
         let currentStep = 1;
 
-        const stepTitles = ["Colloquio", "Restituzione"];
+        const stepTitles = ["Colloquio", "Prossimo passo"];
         const stepDescriptions = [
           "Compila i campi riguardanti il colloquio del paziente.",
           "Compila i campi riguardanti la restituzione programmata",
