--- a/visita.html
+++ b/visita.html
@@ -598,7 +598,7 @@
           </div>
         </div>
 
-        <!-- Step 2: Restituzione -->
+        <!-- Step 2: Next step -->
         <div id="step-2" class="hidden">
           <div class="space-y-8">
             <div>
@@ -743,7 +743,7 @@
         const stepperLines = [document.getElementById("stepper-line-1")];
         let currentStep = 1;
 
-        const stepTitles = ["Visita Medica", "Restituzione"];
+        const stepTitles = ["Visita Medica", "Prossimo passo"];
         const stepDescriptions = [
           "Compila i campi riguardanti la visita medica del paziente.",
           "Compila i campi riguardanti la restituzione programmata",
