--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
       <ul>
         <li>
+          <a class="text-2xl text-blue-600 underline" href="./colloquio">Colloquio</a>
+        </li>
+        <li>
           <a class="text-2xl text-blue-600 underline" href="./visita">Visita</a>
         </li>
         <li>
-          <a class="text-2xl text-blue-600 underline" href="./colloquio">Colloquio</a>
+          <a class="text-2xl text-blue-600 underline" href="./restituzione">Restituzione</a>
         </li>
       </ul>
     </div>
