--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html lang="it">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modulo Anamnesi Paziente</title>
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts: Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
-      <ul>
-        <li>
-          <a class="text-2xl text-blue-600 underline" href="./colloquio">Colloquio</a>
-        </li>
-        <li>
-          <a class="text-2xl text-blue-600 underline" href="./visita">Visita</a>
-        </li>
-        <li>
-          <a class="text-2xl text-blue-600 underline" href="./restituzione">Restituzione</a>
-        </li>
-      </ul>
-    </div>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
